--- a/composer/all.html
+++ b/composer/all.html
@@ -37,6 +37,9 @@ composer global require "fxp/composer-asset-plugin:~1.1.1"</pre>
 
 <h2>Использование</h2>
 <p>Собственно чтобы использовать пакеты затянутые Composer, необходимо подключить файл <var>autoload.php</var> <code>require_once "vendor/autoload.php";</code>.</p>
+<h3>Команды</h3>
+<h4>show</h4>
+<p><code>composer show zlatov/sql</code> - информация об установленном пакете</p>
 <h3>Install или Update?</h3>
 <p>Запуск composer install сделает следующее:</p>
 <ul>
