--- a/ruby/all.html
+++ b/ruby/all.html
@@ -11,6 +11,7 @@
 
 <h2>gem - менеджер пакетов ruby</h2>
 <p><code class="copyToClipboard">gem list</code></p>
+<p><code class="copyToClipboard">gem list ^rails$ --remote --all</code> — посмотреть доступные версии пакета</p>
 <p><code class="copyToClipboard">gem install bundler</code></p>
 <p><code class="copyToClipboard">gem install rails</code></p>
 <p><code>bundle</code> - установить пакеты</p>
