--- a/ruby/all.html
+++ b/ruby/all.html
@@ -353,3 +353,8 @@ a = Cl.new
 p a.attr_i
 </pre>
 
+<h2>Наработки</h2>
+<h3>Кодировка</h3>
+<pre class="prettyprint lang-rb"># encoding: UTF-8
+p "Русский"
+</pre>
