--- a/css/all.html
+++ b/css/all.html
@@ -1,3 +1,16 @@
+<h2>Старт</h2>
+<h3>Подключение в HTML</h3>
+<pre class="prettyprint lang-css">
+&lt;head&gt;
+&lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;mystyle.css&quot;&gt;
+&lt;style type=&quot;text/css&quot;&gt;
+	.class {
+		display: block;
+	}
+&lt;/style&gt;
+&lt;/head&gt;
+</pre>
+
 <h2>Псевдоклассы</h2>
 <h3>По номеру элемента</h3>
 <h4>nth-child</h4>
