--- a/html/all.html
+++ b/html/all.html
@@ -1360,3 +1360,9 @@ U+0022 <code>&amp;#34;</code>
 <pre>
 &lt;form enctype=&quot;application/x-www-form-urlencoded | multipart/form-data | text/plain&quot;&gt;
 </pre>
+
+<h2>Подключение скрипта</h2>
+<pre class="prettyprint lang-html">
+    &lt;script src=&quot;../../theme/bower/jquery/dist/jquery.min.js&quot;&gt;&lt;/script&gt;
+    &lt;script src=&quot;messenger.js&quot;&gt;&lt;/script&gt;
+</pre>
