--- a/js/array_hash/array_hash.html
+++ b/js/array_hash/array_hash.html
@@ -10,9 +10,10 @@
 	<body>
 		<p>Привет, Мир!</p>
 		<script type="text/javascript">
-			$(document).ready(function(){
-				$("#someId").css("color","red");
-			});
+			// $(document).ready(function(){
+			// 	$("#someId").css("color","red");
+			// });
 		</script>
+		<script src="array_hash.js"></script>
 	</body>
 </html>
