--- a/js/messenger/index.html
+++ b/js/messenger/index.html
@@ -11,6 +11,10 @@
 	<body>
 		<p>Привет, Мир!</p>
 		<div id="place"></div>
+		<p>Типы сообщений</p>
+		<div id="place2"></div>
+		<p>Опции</p>
+		<div id="place-no-stack"></div>
 		<script src="../../theme/bower/jquery/dist/jquery.min.js"></script>
 		<script src="../../theme/bower/semantic/dist/semantic.js"></script>
 		<script src="messenger-class.js"></script>
