--- a/css/all.html
+++ b/css/all.html
@@ -90,6 +90,16 @@ span:nth-child(2n-3) {
 <h3></h3>
 <h4></h4>
 <h2>Наработки</h2>
+<h3>Предотвращает события мыши и щелчки по элементу</h3>
+<pre class="prettyprint lang-css">
+	.class {
+		pointer-events: auto | none
+	}
+</pre>
+<pre class="prettyprint lang-js">
+  $(this).css('opacity', '.5')
+  $(this).css('pointer-events', 'none')
+</pre>
 <h3>Многоуровневая нумерация вложенных списков ol</h3>
 <pre class="prettyprint lang-css">
 ol>li{
