--- a/css/all.html
+++ b/css/all.html
@@ -89,7 +89,14 @@ span:nth-child(2n-3) {
 <h3>Стили для боксов</h3>
 <h3></h3>
 <h4></h4>
+
 <h2>Наработки</h2>
+<h3>nobr</h3>
+<pre class="prettyprint lang-css">
+.nobr {
+	white-space: nowrap;
+}
+</pre>
 <h3>Предотвращает события мыши и щелчки по элементу</h3>
 <pre class="prettyprint lang-css">
 	.class {
