--- a/phpbb3/all.html
+++ b/phpbb3/all.html
@@ -174,7 +174,8 @@ print_r($user-&gt;data['session_id']);
 echo &quot;&lt;/pre&gt;&quot;;
 die();
 </pre>
-<h3>Группы пользователя</h3>
+<h3>Пользователь и группы</h3>
+<h4>Узнать группы пользователя</h4>
 <pre class="prettyprint lang-php">
     if ( !function_exists('group_memberships') )
     {
@@ -182,6 +183,17 @@ die();
     }
 
     $groups = group_memberships(false,$user->data['user_id']);
+</pre>
+<h4>Добавить пользователя в группу</h4>
+<pre class="prettyprint lang-php">
+    // (includes/functions_user.php)
+    group_user_add($group_id, $event['user_id']);
+</pre>
+<h3>Пользователь и дата время</h3>
+<pre class="prettyprint lang-php">
+    global $user;
+    ...
+        'MSG_TIME'    => $user->format_date($row['message_time']),
 </pre>
 <h2>Группы</h2>
 <pre class="prettyprint lang-php">
